[gd_scene load_steps=6 format=3 uid="uid://dfmncprlsqnfo"]

[ext_resource type="Script" uid="uid://c4nmeuy3uqcht" path="res://nps.gd" id="1_1xftw"]
[ext_resource type="Texture2D" uid="uid://dyn0rq6th0asr" path="res://icon.svg" id="2_y5srn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_55p84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y5srn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xftw"]
radius = 284.345

[sub_resource type="CircleShape2D" id="CircleShape2D_y5srn"]
radius = 121.062

[node name="nps" type="CharacterBody2D"]
script = ExtResource("1_1xftw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_55p84")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-52, -30, -25, -47, 21, -47, 49, -29, 53, 27, 33, 51, -29, 49, -53, 31)

[node name="zone find player" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="zone find player"]
shape = SubResource("CircleShape2D_1xftw")

[node name="zone dmg player" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="zone dmg player"]
shape = SubResource("CircleShape2D_y5srn")

[connection signal="body_entered" from="zone find player" to="." method="_on_zone_find_player_body_entered"]
[connection signal="body_exited" from="zone find player" to="." method="_on_zone_find_player_body_exited"]
[connection signal="body_entered" from="zone dmg player" to="." method="_on_zone_dmg_player_body_entered"]
